--- a/src/renderer/i18n/locales/zh-Hans/translation.json
+++ b/src/renderer/i18n/locales/zh-Hans/translation.json
@@ -1,4 +1,5 @@
 {
+  " for free now!": "立即免费体验！",
   "(Trial)": "（试用）",
   "[Ctrl+Enter] Save, [Ctrl+Shift+Enter] Save and Resend": "[Ctrl+Enter] 保存, [Ctrl+Shift+Enter] 保存并发送",
   "[Enter] send, [Shift+Enter] line break, [Ctrl+Enter] send without generating": "[回车键] 发送，[Shift+回车键] 换行, [Ctrl+回车键] 发送但不生成",
@@ -10,6 +11,7 @@
   "{{count}} file(s) queued for server parsing": "{{count}} 个文件已加入服务器解析队列",
   "{{count}} MCP servers imported": "{{count}} 个 MCP 服务器已导入",
   "{{count}} ref": "{{count}} 个引用",
+  "## 👋 Hey! I'm Boxy, your setup guide assistant.\n\nChatbox is an **all-in-one AI chat client** that supports 30+ mainstream models including ChatGPT, Claude, DeepSeek, and more.\n\n### ✨ Key Features\n- 🔐 **Local First** — Your data stays on your device, ensuring privacy and security\n- 🎯 **Multi-Model Support** — One app, chat with all AI models\n- 📚 **Knowledge Base** — Let AI understand your private documents\n\n### 📖 Get Help\n- 🎬 [Xiaohongshu Setup Guide](https://www.xiaohongshu.com/user/profile/67b581b6000000000e01d11f) — Step-by-step tutorial (Recommended)\n- 🆘 [Help Center](https://chatboxai.app/zh/help-center) — FAQs\n- 📕 [Product Manual](https://docs.chatboxai.app/) — Detailed feature documentation\n- 📮 Contact us: hi@chatboxai.com\n\n💡 Follow Chatbox on [Xiaohongshu](https://www.xiaohongshu.com/user/profile/67b581b6000000000e01d11f) for the latest updates and tips\n\n---\n\n**Now, let me help you get set up!** First, tell me about your AI experience:": "## 👋 嘿！我是小柴，你的配置引导助手！\n\nChatbox 是一款**多合一 AI 聊天客户端**，支持包括 ChatGPT、Claude、DeepSeek 等在内的 30 多种主流模型。\n\n### ✨ 核心功能\n- 🔐 **本地优先** — 你的数据保留在你的设备上，确保隐私和安全\n- 🎯 **多模型支持** — 一个应用，与所有 AI 模型聊天\n- 📚 **知识库** — 让 AI 理解你的私人文档\n\n### 📖 获取帮助\n- 🎬 [小红书配置指南](https://www.xiaohongshu.com/user/profile/67b581b6000000000e01d11f) — 分步教程（推荐）\n- 🆘 [帮助中心](https://chatboxai.app/zh/help-center) — 常见问题解答\n- 📕 [产品手册](https://docs.chatboxai.app/) — 详细的功能文档\n- 📮 联系我们：hi@chatboxai.com\n\n💡 在[小红书](https://www.xiaohongshu.com/user/profile/67b581b6000000000e01d11f)上关注 Chatbox，获取最新动态和技巧\n\n---\n\n**现在，让我来帮你完成设置！** 首先，告诉我你的 AI 使用经验：",
   "A cozy coffee shop interior": "温馨的咖啡馆室内",
   "A cute rabbit in Pixar animation style": "皮克斯动画风格的可爱兔子",
   "A futuristic city with flying cars": "拥有飞行汽车的未来城市",
@@ -44,6 +46,7 @@
   "AI Model Provider": "AI 模型提供方",
   "ai provider no implemented paint tips": "当前 AI 模型提供方（{{aiProvider}}）暂时不支持绘图功能，目前仅 Chatbox AI、 OpenAI 与 Azure OpenAI 支持该功能，如有需要请<0>打开设置切换</0> AI 模型提供方",
   "AI Settings": "AI 设置",
+  "AI-generated content may be inaccurate. Please verify important information.": "AI 生成的内容可能不准确。请核实重要信息。",
   "AI-generated images may not be accurate. Review output carefully.": "AI 生成的图像可能不准确。请仔细核对输出内容。",
   "AIHubMix integration in Chatbox offers 10% discount": "在Chatbox中接入AIHubMix可享受10%优惠",
   "All": "全部",
@@ -91,6 +94,9 @@
   "Automatic updates": "自动更新",
   "Automatically render generated artifacts (e.g., HTML with CSS, JS, Tailwind)": "自动渲染生成物（例如，带有 CSS、JS、Tailwind 的 HTML）",
   "Automatically summarize and compact conversation history when context size exceeds the threshold, preserving key information while reducing token usage.": "当上下文大小超过阈值时，自动总结并压缩对话历史，在保留关键信息的同时减少 token 使用量。",
+  "Awesome, you're all set! You can now start using Chatbox.\n\nClick the **New Chat** button in the sidebar or below to start a new conversation. If you have any questions, feel free to click the Help button in the bottom left corner anytime. Enjoy!": "太棒了，您已准备就绪！您现在可以开始使用 Chatbox 了。\n\n点击侧边栏 **新对话** 或下方的按钮以开启新的对话。如果您有任何疑问，请随时点击侧边栏的帮助按钮。祝使用愉快！🎉",
+  "Awesome, you're all set! You can now start using Chatbox.\n\nClick the **New Chat** button in the sidebar or below to start a new conversation. If you have more questions about Chatbox AI, feel free to click the Help button in the bottom left corner anytime. Enjoy!": "太棒了，一切已准备就绪！您现在可以开始使用 Chatbox 了。\n\n点击侧边栏 **新对话** 或下方的按钮即可开始新的对话。如果您对 Chatbox AI 还有更多疑问，可以随时点击侧边栏的帮助按钮。祝您使用愉快！🎉",
+  "Awesome, you're all set! You can now start using Chatbox.\n\nTry Clicking the **New Chat** button in the sidebar to start a new chat. If you have any questions, feel free to click the Help button in the bottom left corner anytime. Enjoy!": "太棒了，你已准备就绪！现在你可以开始使用 Chatbox 了。\n\n尝试点击侧边栏的 **新对话** 按钮来开始新的对话。如果你有任何问题，可以随时点击侧边栏的帮助按钮。祝你使用愉快！🎉",
   "Azure API Key": "密钥",
   "Azure API Version": "Azure API 版本",
   "Azure Dall-E Deployment Name": "Dall-E 模型部署名称",
@@ -121,14 +127,18 @@
   "Chat Settings": "对话设置",
   "Chatbox AI Advanced Model Quota": "Chatbox AI 高级模型配额",
   "Chatbox AI Cloud": "Chatbox AI 云",
+  "Chatbox AI free trial available": "Chatbox AI 免费试用现已开启",
   "Chatbox AI Image Quota": "Chatbox AI 图片剩余额度",
   "Chatbox AI License": "Chatbox AI 许可证",
   "Chatbox AI offers a user-friendly AI solution to help you enhance productivity": "Chatbox AI 旨在让更多人享受AI带来的工作效率提升，你只需按照成本价支付背后的模型成本费用",
   "Chatbox AI parse failed": "Chatbox AI 解析失败",
   "Chatbox AI provides all the essential model support required for knowledge base processing": "Chatbox AI 提供知识库处理所需的所有基本模型支持",
+  "Chatbox AI provides all the essential model support required for knowledge base processing. Consumes compute points.": "Chatbox AI 提供知识库处理所需的所有核心模型支持。消耗计算点数。",
   "Chatbox AI Quota": "Chatbox AI 配额",
   "Chatbox AI Standard Model Quota": "Chatbox AI 标准模型配额",
   "Chatbox Featured": "Chatbox精选",
+  "Chatbox Guide": "Chatbox 指南",
+  "Chatbox is ready. To save resources, please start a new chat to continue.": "Chatbox 已准备就绪。为了节省资源，请开启新对话以继续。",
   "Chatbox OCRs images with this model and sends the text to models without image support.": "Chatbox 使用此模型对图像进行 OCR 识别，并将文本发送给不支持图像的模型。",
   "Chatbox respects your privacy and only uploads anonymous error data and events when necessary. You can change your preferences at any time in the settings.": "Chatbox 尊重您的隐私，仅在必要时上传匿名错误数据和事件。您可以随时在设置中更改您的偏好。",
   "Chatbox Search is a paid feature with advanced capabilities and better performance.": "Chatbox 搜索是一项付费功能，具有高级功能和更优的性能。",
@@ -144,11 +154,13 @@
   "Choose a knowledge base": "选择知识库",
   "Chunk": "分块",
   "chunks": "分块",
+  "Claim Free Plan": "领取免费套餐",
   "Claude API Compatible": "Claude API 兼容",
   "clean": "清空",
   "clean it up": "清理",
   "Clear All Messages": "清空所有消息",
   "Clear Conversation List": "对话列表清理",
+  "Click here to login": "点击此处登录",
   "Click here to set up": "点击此处进行设置",
   "Click to view full text": "点击查看全文",
   "Click to view license details and quota usage": "点击查看 license 详情与配额使用情况",
@@ -303,6 +315,7 @@
   "Environment Variables": "环境变量",
   "Error Reporting": "错误报告",
   "Estimated Token Usage": "Token 使用量估算",
+  "Excellent! You're all set to explore on your own.\n\nClick the **Settings** icon in the sidebar, then go to **Model Providers** to configure your API key. If you need help later, just click the Help button in the bottom left corner. Enjoy!": "太棒了！你已经准备好开启探索之旅了。\n\n点击侧边栏的 **设置** 图标，然后前往 **模型提供方** 配置你的 API Key。如果以后需要帮助，只需点击侧边栏的 **帮助** 按钮。祝使用愉快！如果有任何关于 Chatbox 的问题，也可以继续向我提问！",
   "expand": "展开",
   "Expand": "展开",
   "Expansion Pack Quota": "扩展包配额",
@@ -321,6 +334,7 @@
   "extension": "扩展",
   "Failed": "失败",
   "Failed to activate license, please check your license key and network connection": "激活许可证失败，请检查您的许可证密钥和网络连接",
+  "Failed to activate the license key. You can try activating manually in **Settings**, or log in to the [Chatbox AI website](https://chatboxai.app) to view your license details.": "激活许可密钥失败。您可以尝试在**设置**中手动激活，或登录 [Chatbox AI 官网](https://chatboxai.app)查看您的许可详情。",
   "Failed to create knowledge base, Error: {{error}}": "创建知识库失败，错误：{{error}}",
   "Failed to export file: {{error}}": "导出文件失败：{{error}}",
   "Failed to fetch Chatbox AI models config, Error: {{error}}": "获取 {{Chatbox}} {{AI}} 模型配置失败，错误：{{error}}",
@@ -361,6 +375,7 @@
   "Font Size": "字体大小",
   "font size changed, effective after next launch": "字体大小已改变，将在下次启动时生效",
   "Format": "格式",
+  "Free trial available": "免费试用Chatbox AI",
   "Full-text search of chat history (coming soon)": "全文搜索聊天记录（敬请期待）",
   "Function": "功能",
   "General Settings": "常规设置",
@@ -373,13 +388,17 @@
   "Get Files Meta": "获取文件元数据",
   "Get License": "获取License",
   "get more": "获取更多",
+  "Getting Started": "开始使用",
   "Github": "Github",
   "Go to Image Creator": "前往图像生成器",
   "Google Gemini API Compatible": "Google Gemini API 兼容",
+  "Great! Chatbox AI is our all-in-one service designed for new users - it works out of the box with no complex setup required.\n\nClick the login button below to sign in on the Chatbox AI website and complete authorization.": "太棒了！Chatbox AI 是我们为新用户设计的一站式服务——无需复杂设置，开箱即用。\n\n点击下方的登录按钮，在 Chatbox AI 官网登录并完成授权。",
   "Harmful or offensive content": "有害或不适当的内容",
   "Hassle-free setup": "无需烦恼各种技术难题",
   "Hate speech or harassment": "仇恨言论或骚扰",
+  "Help": "帮助",
   "Here you can add and manage various custom model providers. As long as the provider's API is compatible with the selected API mode, you can seamlessly connect and use it within Chatbox.": "在这里，您可以添加和管理各种自定义模型提供方。只要提供方的 API 与所选的 API 模式兼容，您就可以在 Chatbox 中无缝连接和使用它。",
+  "Hey! Welcome to Chatbox, your personal AI assistant.\n\nBefore we begin, I'd like to know a bit about your experience so I can provide better guidance.\n\nHave you used AI chat tools before?": "嘿！欢迎使用 Chatbox，您的 AI 向导助手小柴！\n\n在开始之前，我想先了解一下您的使用经验，以便为您提供更好的指导。\n\n您以前使用过一站式 AI 聊天工具吗？",
   "Hide": "隐藏",
   "Hide History": "隐藏历史记录",
   "High": "高",
@@ -387,11 +406,17 @@
   "Home Page": "主页",
   "Homepage": "首页",
   "Hotkeys": "快捷键",
+  "How do I switch to different models, like DeepSeek?": "如何切换到不同的模型，例如 DeepSeek 或 Gemini？",
   "How to use?": "如何使用？",
+  "I know how to configure API keys": "我知道如何配置 API KEY",
+  "I want to try Chatbox for free!": "我想免费试用 Chatbox！",
+  "I'm a bit tired now. Please click the **New Chat** button in the sidebar or below to start a new conversation.": "我现在有点累了。请点击侧边栏或下方的**新建对话**按钮来开启一段新对话。",
+  "I'm new to this": "我是新手",
   "ID": "ID",
   "Ideal for both work and educational scenarios": "适用于工作和教育场景",
   "Ideal for work and study": "适用于办公与学习场景",
   "If conversations are missing from the list, use this feature to scan and recover them from storage": "如果对话列表中缺少对话，可以使用此功能从存储中扫描并恢复它们",
+  "If you have never had a license before, you can claim it after logging in on the official website.": "未购买过 license 的用户，登录官网后可以看到免费领取入口",
   "Image Creator": "图片生成器",
   "Image Creator Intro": "Hi！我是 Chatbox Image Creator，“无情”的图片制造机。我可以根据你的描述生成精美图片，只要你能想象得到，我就能创造出来——迷人的风景、生动的角色、App 图标、或者抽象的构思……\n\n(๑•́ ₃ •̀๑) 额…我是一个有点自闭的机器人，所以**请直接告诉我你想要图片的文字描述**，我会集中我所有的像素去实现你的想象。\n\n现在请发挥你的想象力吧！",
   "Image Quota": "图片配额",
@@ -426,6 +451,8 @@
   "Last Session": "上次会话",
   "LaTeX Rendering (Requires Markdown)": "LaTeX 渲染（需要 Markdown）",
   "Launch at system startup": "开机自启动",
+  "Leave": "离开",
+  "Leave Guide?": "离开引导？",
   "License Activated": "License 已激活",
   "License expired, please check your license key": "license 已过期，请检查您的 license key",
   "License Expiry": "许可过期时间",
@@ -452,11 +479,15 @@
   "Log in to your Chatbox account": "登录你的 Chatbox 账户",
   "Log out": "退出登录",
   "Login": "登录",
+  "Login Chatbox AI": "登录 Chatbox AI",
   "Login Error": "登录错误",
+  "Login failed.": "登录失败。",
   "Login Successful": "登录成功",
   "Login successful but tokens not received from server": "登录成功，但未从服务器收到令牌",
   "Login Timeout": "登录超时",
   "Login timeout. Please try again.": "登录超时。请重试。",
+  "Login to Chatbox AI": "登录 Chatbox AI",
+  "Login to start chatting with AI": "登录后与 AI 聊天",
   "Low": "低",
   "Make sure you have the following command installed:": "请确保您已安装以下命令：",
   "Manage License": "管理 License",
@@ -539,6 +570,7 @@
   "None": "无",
   "not available in browser": "此功能在浏览器中无法使用，请下载桌面应用",
   "Not set": "未设置",
+  "Note: If you have never had a license before, you can claim it after logging in on the official website. Quota refreshed daily.": "注意：如果您从未购买过 License，则可以在官网登录后领取免费试用。额度每日刷新。",
   "Nothing found...": "未找到...",
   "Number of Images per Reply": "每次回复的图片数量",
   "OCR Model": "OCR 模型",
@@ -547,6 +579,7 @@
   "One-click MCP servers for Chatbox AI subscribers": "Chatbox AI 订阅者的一键 MCP 服务器",
   "Only supports basic text files (.txt, .md, .json, code files, etc.). For PDF and Office files, please switch to Chatbox AI.": "仅支持基本文本文件（.txt、.md、.json、代码文件等）。对于 PDF 和 Office 文件，请切换至 Chatbox AI。",
   "Open": "打开",
+  "Open Provider Settings": "打开服务商设置",
   "openai": "经典API调用方式，更好的兼容性，适用于大多数GPT模型",
   "OpenAI (Responses API)": "OpenAI（Responses API）",
   "OpenAI API Compatible": "OpenAI API 兼容",
@@ -559,6 +592,7 @@
   "or": "或",
   "Or become a sponsor": "或成为赞助商",
   "Other concerns": "其他问题",
+  "Other options": "其他选项",
   "Parse Link": "解析链接",
   "Parser": "解析器",
   "Parser Type": "解析器类型",
@@ -573,6 +607,7 @@
   "Platform Not Supported": "平台不支持",
   "Please click the link below to complete login:": "请点击下方链接完成登录：",
   "Please complete login in your browser. If you are not redirected, please click the link below:": "请在浏览器中完成登录。如果您没有被重定向，请点击下方链接：",
+  "Please complete setup to continue chatting": "请完成设置以继续聊天。",
   "Please describe the content you want to report (Optional)": "请描述您想要举报的内容（可选）",
   "Please ensure that the Remote LM Studio Service is able to connect remotely. For more details, refer to <a>this tutorial</a>.": "请确保远程 LM Studio 服务能够远程连接。更多详情请参考<a>此教程</a>。",
   "Please ensure that the Remote Ollama Service is able to connect remotely. For more details, refer to <a>this tutorial</a>.": "请确保远程 Ollama 服务能够远程连接。更多详情请参考<a>此教程</a>。",
@@ -587,6 +622,7 @@
   "Premium Activation": "专业版激活",
   "Premium License Activated": "专业版已激活",
   "Premium License Key": "专业版授权激活码",
+  "Preparing login...": "正在准备登录...",
   "Press hotkey": "输入快捷键",
   "Preview": "预览",
   "Privacy Policy": "隐私政策",
@@ -613,6 +649,7 @@
   "Read our": "阅读我们的",
   "Reading file...": "正在读取文件...",
   "Reasoning": "推理",
+  "Recommended": "推荐",
   "Recover": "恢复",
   "Recover Conversation List": "找回对话列表",
   "Recovered {{count}} conversations": "已恢复 {{count}} 个对话",
@@ -655,6 +692,7 @@
   "Retrying {{attempt}}/{{maxAttempts}}": "正在重试 {{attempt}}/{{maxAttempts}}",
   "Return to the top": "跳转到顶部",
   "Roadmap": "未来规划",
+  "Rollback Thread": "回滚话题",
   "save": "保存",
   "Save": "保存",
   "Save & Resend": "保存并发送",
@@ -712,6 +750,7 @@
   "Showing {{loaded}} of {{total}} chunks": "显示 {{loaded}} / {{total}} 分块",
   "Showing first {{count}} chunks": "显示前 {{count}} 分块",
   "SiliconFlow": "硅基流动",
+  "Skip guide": "跳过引导",
   "Smartest AI-Powered Services for Rapid Access": "最智能的 AI 服务，快速访问",
   "Some files failed to parse. Please remove them and try again.": "部分文件解析失败，请移除后重试。",
   "Sorry, the current model {{model}} API itself does not support image understanding. If you need to send images, please switch to another model or use the recommended <OpenMorePlanButton>Chatbox AI Models</OpenMorePlanButton>.": "抱歉，当前模型 {{model}} API 本身不支持图片理解。如果您需要发送图片，请切换到其他模型或使用推荐的 <OpenMorePlanButton>Chatbox AI Models</OpenMorePlanButton>。",
@@ -724,10 +763,12 @@
   "Standard": "标准",
   "star": "星标",
   "Start a New Thread": "新话题",
+  "Start New Chat": "新对话",
   "Start Setup": "开始设置",
   "Starting new thread...": "正在开始新会话...",
   "Startup Page": "启动页",
   "Status": "状态",
+  "Stay": "留在此页",
   "stop generating": "停止生成",
   "Stream output": "流式输出",
   "submit": "提交",
@@ -812,6 +853,8 @@
   "Total": "总计",
   "Total Chunks": "总分块",
   "Total Quota": "总额度",
+  "Try again": "重试",
+  "try Chatbox AI": "试用 Chatbox AI",
   "Type": "类型",
   "Type a command or search": "输入命令或搜索内容",
   "Type your question here...": "在这里输入你的问题...",
@@ -834,6 +877,7 @@
   "Upload your first document to get started": "上传您的第一个文档即可开始",
   "Upon import, changes will take effect immediately and existing data will be overwritten": "导入后将直接生效，原有数据将被覆盖",
   "Use as Reference": "作为参考图",
+  "Use Chatbox AI service": "使用 Chatbox AI 一站式服务",
   "Use default (first model)": "使用默认（第一个模型）",
   "Use My Own API Key / Local Model": "使用自己的 API Key 或本地模型",
   "Use proxy to resolve CORS and other network issues": "使用代理解决 CORS 和其他网络问题",
@@ -864,6 +908,7 @@
   "Vivid": "艺术",
   "VolcEngine": "火山引擎",
   "Waiting for login...": "等待登录...",
+  "We've been chatting for a while now. To conserve resources, please complete the setup before continuing our conversation.": "我们已经聊了一会儿了。为了节省资源，请在继续我们的对话之前完成设置。",
   "Web Browsing": "联网问答",
   "Web browsing (coming soon)": "联网回答 Web browsing（敬请期待）",
   "Web Browsing...": "联网搜索中...",
@@ -871,10 +916,15 @@
   "Webpage Published": "网页已发布",
   "WeChat": "微信",
   "Welcome to Chatbox": "欢迎使用 Chatbox AI",
+  "Welcome to Chatbox!": "欢迎来到 Chatbox！",
   "What can I help you with today?": "今天我能为你提供什么帮助？",
+  "What is an API? Where to get it? How to connect?": "什么是 API？从哪里获取？如何连接？",
+  "What is the relationship between Chatbox and other model providers?": "Chatbox 与其他模型提供商的关系是什么？",
   "When enabled, conversations will be automatically summarized to manage context window usage.": "启用后，对话将自动总结，以管理上下文窗口的使用。",
+  "Where is the Knowledge Base feature?": "知识库功能在哪里？",
   "Yes": "是",
   "You are already a Premium user": "你已经是专业版用户",
+  "You can ": "您可以",
   "You have exceeded the rate limit for the Chatbox AI service. Please try again later.": "您已超过 Chatbox AI 服务的速率限制。请稍后重试。",
   "You have multiple licenses. Please select one to use:": "你有多个许可证。请选择一个使用：",
   "You have no more Chatbox AI quota left this month.": "您本月的Chatbox AI配额已用尽。",
@@ -884,6 +934,9 @@
   "You have selected Tavily as the search provider, but an API key has not been entered yet. Please <OpenExtensionSettingButton>click here to open Settings</OpenExtensionSettingButton> and enter your API key, or choose a different search provider.": "您已选择 Tavily 作为搜索提供方，但尚未输入 API key。请<OpenExtensionSettingButton>点击这里打开设置</OpenExtensionSettingButton>并输入您的 API key，或选择其他搜索提供方。",
   "You have unsaved changes. Exiting will discard these changes.": "您有未保存的更改。退出将丢弃这些更改。",
   "You have unsaved settings. Are you sure you want to leave?": "您有未保存的设置。确定要离开吗？",
+  "You haven't completed the setup yet. Your progress will be cleared if you leave now.": "您尚未完成设置。如果现在离开，您的进度将被清除。",
+  "You might also want to ask": "你可能还想问",
+  "You've already completed the setup and can use Chatbox normally.\n\nIf you have any questions about Chatbox AI, feel free to ask me here.": "您已完成初始化设置，可以正常使用 Chatbox 了。\n\n如果您对 Chatbox AI 还有任何疑问，欢迎随时向我提问。",
   "Your ChatboxAI subscription already includes access to models from various providers. There's no need to switch providers - you can select different models directly within ChatboxAI. Switching from ChatboxAI to other providers will require their respective API keys. <button>Back to ChatboxAI</button>": "您的 ChatboxAI 订阅已包含来自各大供应商的模型访问权限。您可以直接在 ChatboxAI 中选择不同的模型，无需切换供应商。从 ChatboxAI 切换到其他供应商将需要他们各自的 API 密钥。<button>返回 ChatboxAI</button>",
   "Your conversation has exceeded the model's context limit. Try compressing the conversation, starting a new chat, or reducing the number of context messages in settings.": "您的对话已超过模型的上下文限制。请尝试压缩对话、开启新对话，或在设置中减少上下文消息的数量。",
   "Your current License (Chatbox AI Lite) does not support the {{model}} model. To use this model, please <OpenMorePlanButton>upgrade</OpenMorePlanButton> to Chatbox AI Pro or a higher-tier package. Alternatively, you can switch to a different model by <OpenSettingButton>accessing the settings</OpenSettingButton>.": "您当前的 License（Chatbox AI Lite）不支持 {{model}} 模型。要使用此模型，请<OpenMorePlanButton>升级</OpenMorePlanButton>到 Chatbox AI Pro 或更高级别的套餐。或者，您可以通过<OpenSettingButton>访问设置</OpenSettingButton>切换到其他模型。",
