--- a/src/renderer/i18n/locales/zh-Hant/translation.json
+++ b/src/renderer/i18n/locales/zh-Hant/translation.json
@@ -1,4 +1,5 @@
 {
+  " for free now!": "立即免費！",
   "(Trial)": "（試用）",
   "[Ctrl+Enter] Save, [Ctrl+Shift+Enter] Save and Resend": "[Ctrl+Enter] 儲存, [Ctrl+Shift+Enter] 儲存後重發",
   "[Enter] send, [Shift+Enter] line break, [Ctrl+Enter] send without generating": "[Enter] 傳送、[Shift＋Enter] 換行、[Ctrl＋Enter] 傳送但不產生",
@@ -10,6 +11,7 @@
   "{{count}} file(s) queued for server parsing": "{{count}} 個檔案已排入伺服器解析佇列",
   "{{count}} MCP servers imported": "{{count}} MCP 伺服器已匯入",
   "{{count}} ref": "{{count}} 條引用",
+  "## 👋 Hey! I'm Boxy, your setup guide assistant.\n\nChatbox is an **all-in-one AI chat client** that supports 30+ mainstream models including ChatGPT, Claude, DeepSeek, and more.\n\n### ✨ Key Features\n- 🔐 **Local First** — Your data stays on your device, ensuring privacy and security\n- 🎯 **Multi-Model Support** — One app, chat with all AI models\n- 📚 **Knowledge Base** — Let AI understand your private documents\n\n### 📖 Get Help\n- 🎬 [Xiaohongshu Setup Guide](https://www.xiaohongshu.com/user/profile/67b581b6000000000e01d11f) — Step-by-step tutorial (Recommended)\n- 🆘 [Help Center](https://chatboxai.app/zh/help-center) — FAQs\n- 📕 [Product Manual](https://docs.chatboxai.app/) — Detailed feature documentation\n- 📮 Contact us: hi@chatboxai.com\n\n💡 Follow Chatbox on [Xiaohongshu](https://www.xiaohongshu.com/user/profile/67b581b6000000000e01d11f) for the latest updates and tips\n\n---\n\n**Now, let me help you get set up!** First, tell me about your AI experience:": "## 👋 嘿！我是小柴，你的設定引導助手。\n\nChatbox 是一款 **全能 AI 對話客戶端**，支援 30 多種主流模型，包括 ChatGPT、Claude、DeepSeek 等。\n\n### ✨ 主要功能\n- 🔐 **本地優先** — 你的數據保留在你的設備上，確保隱私與安全\n- 🎯 **多模型支持** — 一個應用，即可與所有 AI 模型對話\n- 📚 **知識庫** — 讓 AI 理解你的私人文件\n\n### 📖 獲取幫助\n- 🎬 [小紅書設定指南](https://www.xiaohongshu.com/user/profile/67b581b6000000000e01d11f) — 逐步教學（推薦）\n- 🆘 [幫助中心](https://chatboxai.app/zh/help-center) — 常見問題\n- 📕 [產品手冊](https://docs.chatboxai.app/) — 詳細功能文件\n- 📮 聯繫我們：hi@chatboxai.com\n\n💡 在 [小紅書](https://www.xiaohongshu.com/user/profile/67b581b6000000000e01d11f) 上關注 Chatbox，獲取最新動態與技巧\n\n---\n\n**現在，讓我來協助你完成設定！** 首先，請告訴我你有關 AI 的使用經驗：",
   "A cozy coffee shop interior": "溫馨的咖啡店室內",
   "A cute rabbit in Pixar animation style": "皮克斯動畫風格的可愛兔子",
   "A futuristic city with flying cars": "充滿未來感的城市與飛行車",
@@ -43,6 +45,7 @@
   "AI Model Provider": "AI 模型提供者",
   "ai provider no implemented paint tips": "當前 AI 模型提供方（{{aiProvider}}）暫時不支持繪圖功能，目前僅 Chatbox AI、OpenAI 與 Azure OpenAI 支持該功能，如有需要請<0>開啟設置切換</0> AI 模型提供方",
   "AI Settings": "AI 設定",
+  "AI-generated content may be inaccurate. Please verify important information.": "AI 生成的內容可能不準確。請查證重要資訊。",
   "AI-generated images may not be accurate. Review output carefully.": "AI 生成的圖像可能不準確。請仔細檢查輸出內容。",
   "AIHubMix integration in Chatbox offers 10% discount": "在Chatbox中接入AIHubMix可享受10%優惠",
   "All": "全部",
@@ -90,6 +93,9 @@
   "Automatic updates": "自動更新",
   "Automatically render generated artifacts (e.g., HTML with CSS, JS, Tailwind)": "自動渲染生成的內容（例如，帶有 CSS、JS、Tailwind 的 HTML）",
   "Automatically summarize and compact conversation history when context size exceeds the threshold, preserving key information while reducing token usage.": "當上下文長度超過閾值時，自動摘要並壓縮對話歷史，在保留關鍵資訊的同時減少 token 使用量。",
+  "Awesome, you're all set! You can now start using Chatbox.\n\nClick the **New Chat** button in the sidebar or below to start a new conversation. If you have any questions, feel free to click the Help button in the bottom left corner anytime. Enjoy!": "太棒了，一切就緒！你現在可以開始使用 Chatbox 了。\n\n點擊側邊欄或下方的 **新對話** 按鈕來開始新的對話。如果你有任何問題，隨時可以點擊左下角的幫助按鈕。祝使用愉快！",
+  "Awesome, you're all set! You can now start using Chatbox.\n\nClick the **New Chat** button in the sidebar or below to start a new conversation. If you have more questions about Chatbox AI, feel free to click the Help button in the bottom left corner anytime. Enjoy!": "太棒了，您已準備就緒！您現在可以開始使用 Chatbox 了。\n\n點擊側邊欄或下方的 **新對話** 按鈕以開始新的對話。如果您對 Chatbox AI 有更多疑問，歡迎隨時點擊左下角的「幫助」按鈕。祝使用愉快！",
+  "Awesome, you're all set! You can now start using Chatbox.\n\nTry Clicking the **New Chat** button in the sidebar to start a new chat. If you have any questions, feel free to click the Help button in the bottom left corner anytime. Enjoy!": "太棒了，一切就緒！您現在可以開始使用 Chatbox 了。\n\n請嘗試點擊側邊欄的 **新對話** 按鈕來開始新的對話。如果您有任何問題，隨時可以點擊左下角的「幫助」按鈕。祝您使用愉快！",
   "Azure API Key": "密鑰",
   "Azure API Version": "Azure API 版本",
   "Azure Dall-E Deployment Name": "Dall-E 模型部署名稱",
@@ -120,14 +126,18 @@
   "Chat Settings": "對話設定",
   "Chatbox AI Advanced Model Quota": "Chatbox AI 高級模型配額",
   "Chatbox AI Cloud": "Chatbox AI 雲端",
+  "Chatbox AI free trial available": "Chatbox AI 提供免費試用",
   "Chatbox AI Image Quota": "Chatbox AI 圖片餘額",
   "Chatbox AI License": "Chatbox AI 授權",
   "Chatbox AI offers a user-friendly AI solution to help you enhance productivity": "Chatbox AI 的目標是讓更多人體驗到 AI 帶來的工作效率提升，您只需支付相應的成本價格以應對模型的成本費用",
   "Chatbox AI parse failed": "Chatbox AI 解析失敗",
   "Chatbox AI provides all the essential model support required for knowledge base processing": "Chatbox AI 提供知識庫處理所需的所有必要模型支援",
+  "Chatbox AI provides all the essential model support required for knowledge base processing. Consumes compute points.": "Chatbox AI 提供知識庫處理所需的所有必要模型支援。將消耗計算點數。",
   "Chatbox AI Quota": "Chatbox AI 配額",
   "Chatbox AI Standard Model Quota": "Chatbox AI 標準模型配額",
   "Chatbox Featured": "Chatbox精選",
+  "Chatbox Guide": "Chatbox 指南",
+  "Chatbox is ready. To save resources, please start a new chat to continue.": "Chatbox 已就緒。為了節省資源，請開啟新對話以繼續。",
   "Chatbox OCRs images with this model and sends the text to models without image support.": "Chatbox 會使用此模型進行圖片 OCR，並將文字傳送給不支援圖片的模型。",
   "Chatbox respects your privacy and only uploads anonymous error data and events when necessary. You can change your preferences at any time in the settings.": "Chatbox 尊重您的隱私，僅在必要時上傳匿名錯誤數據和事件。您可以隨時在設置中更改您的偏好。",
   "Chatbox Search is a paid feature with advanced capabilities and better performance.": "Chatbox Search 是一項付費功能，具有進階功能並提供更佳效能。",
@@ -143,11 +153,13 @@
   "Choose a knowledge base": "選擇知識庫",
   "Chunk": "區塊",
   "chunks": "區塊",
+  "Claim Free Plan": "領取免費方案",
   "Claude API Compatible": "Claude API 兼容",
   "clean": "清除",
   "clean it up": "清理",
   "Clear All Messages": "清空所有消息",
   "Clear Conversation List": "清理對話列表",
+  "Click here to login": "點擊這裡登入",
   "Click here to set up": "按此設定",
   "Click to view full text": "點擊查看全文",
   "Click to view license details and quota usage": "點擊查看 License 詳情與配額使用情況",
@@ -300,6 +312,7 @@
   "Environment Variables": "環境變數",
   "Error Reporting": "錯誤上報",
   "Estimated Token Usage": "預估 Token 用量",
+  "Excellent! You're all set to explore on your own.\n\nClick the **Settings** icon in the sidebar, then go to **Model Providers** to configure your API key. If you need help later, just click the Help button in the bottom left corner. Enjoy!": "太棒了！您已經準備好開始探索了。\n\n點擊側邊欄中的 **Settings** 圖示，然後前往 **Model Providers** 設定您的 API Key。如果之後需要幫助，隨時可以點擊左下角的 **帮助** 按鈕。祝您使用愉快！",
   "expand": "展開",
   "Expand": "展開",
   "Expansion Pack Quota": "擴充包配額",
@@ -318,6 +331,7 @@
   "extension": "擴展",
   "Failed": "失敗",
   "Failed to activate license, please check your license key and network connection": "激活授權失敗，請檢查您的授權金鑰和網路連接",
+  "Failed to activate the license key. You can try activating manually in **Settings**, or log in to the [Chatbox AI website](https://chatboxai.app) to view your license details.": "無法啟動授權碼。您可以嘗試在 **Settings** 中手動啟動，或登入 [Chatbox AI 網站](https://chatboxai.app)查看您的授權詳情。",
   "Failed to create knowledge base, Error: {{error}}": "建立知識庫失敗，錯誤：{{error}}",
   "Failed to export file: {{error}}": "匯出檔案失敗：{{error}}",
   "Failed to fetch Chatbox AI models config, Error: {{error}}": "無法取得 Chatbox AI 模型配置，錯誤：{{error}}",
@@ -358,6 +372,7 @@
   "Font Size": "字型大小",
   "font size changed, effective after next launch": "字體大小已改變，將在下次啟動時生效",
   "Format": "格式",
+  "Free trial available": "提供免費試用",
   "Full-text search of chat history (coming soon)": "全文搜索聊天記錄（敬請期待）",
   "Function": "功能",
   "General Settings": "一般設定",
@@ -370,13 +385,17 @@
   "Get Files Meta": "取得檔案中繼資料",
   "Get License": "获取License",
   "get more": "取得更多",
+  "Getting Started": "開始使用",
   "Github": "Github",
   "Go to Image Creator": "前往圖片生成器",
   "Google Gemini API Compatible": "Google Gemini API 兼容",
+  "Great! Chatbox AI is our all-in-one service designed for new users - it works out of the box with no complex setup required.\n\nClick the login button below to sign in on the Chatbox AI website and complete authorization.": "太棒了！Chatbox AI 是我們專為新用戶設計的一站式服務——開箱即用，無需任何複雜設定。\n\n點擊下方的登入按鈕以在 Chatbox AI 網站登入並完成授權。",
   "Harmful or offensive content": "有害或不適當的內容",
   "Hassle-free setup": "免去繁瑣技術問題的困擾",
   "Hate speech or harassment": "仇恨言論或騷擾",
+  "Help": "幫助",
   "Here you can add and manage various custom model providers. As long as the provider's API is compatible with the selected API mode, you can seamlessly connect and use it within Chatbox.": "在這裡，您可以添加和管理各種自定義模型提供方。只要提供方的 API 與所選的 API 模式兼容，您就可以在 Chatbox 中無縫連接和使用它。",
+  "Hey! Welcome to Chatbox, your personal AI assistant.\n\nBefore we begin, I'd like to know a bit about your experience so I can provide better guidance.\n\nHave you used AI chat tools before?": "嘿！歡迎使用 Chatbox，您的專屬 AI 助理。\n\n在我們開始之前，我想先了解一下您的使用經驗，以便提供更好的引導。\n\n您以前使用過 AI 聊天工具嗎？",
   "Hide": "隱藏",
   "Hide History": "隱藏紀錄",
   "High": "高",
@@ -384,11 +403,17 @@
   "Home Page": "首頁",
   "Homepage": "首頁",
   "Hotkeys": "快捷鍵",
+  "How do I switch to different models, like DeepSeek?": "如何切換到不同的模型，例如 DeepSeek 或 Gemini？",
   "How to use?": "如何使用？",
+  "I know how to configure API keys": "我知道如何設定 API 金鑰",
+  "I want to try Chatbox for free!": "我想免費體驗 Chatbox！",
+  "I'm a bit tired now. Please click the **New Chat** button in the sidebar or below to start a new conversation.": "我現在有點累了。請點擊側邊欄或下方的「**新對話**」按鈕來開始新的對話。",
+  "I'm new to this": "我是新手",
   "ID": "ID",
   "Ideal for both work and educational scenarios": "適用於工作和教育場景",
   "Ideal for work and study": "適用於辦公與學習場景",
   "If conversations are missing from the list, use this feature to scan and recover them from storage": "如果對話從列表中遺失，請使用此功能來掃描並從儲存空間中復原它們",
+  "If you have never had a license before, you can claim it after logging in on the official website.": "如果您以前從未有過許可證，可以在登入官方網站後領取。",
   "Image Creator": "圖片產生器",
   "Image Creator Intro": "Hi！我是 Chatbox Image Creator，圖片製造機。我可以根據你的描述生成精美圖片，只要你能想像得到，我就能創造出來——迷人的風景、生動的角色、App 圖示、或者抽象的構思……\n\n(๑•́ ₃ •̀๑) 呃…我是一個有點自閉的機器人，所以**請直接告訴我你想要圖片的文字描述**，我會集中我所有的像素去實現你的想像。\n\n現在請發揮你的想像力吧！",
   "Image Quota": "圖片配額",
@@ -423,6 +448,8 @@
   "Last Session": "上次會話",
   "LaTeX Rendering (Requires Markdown)": "LaTeX 渲染（需要 Markdown）",
   "Launch at system startup": "開機自啟動",
+  "Leave": "離開",
+  "Leave Guide?": "離開引導？",
   "License Activated": "License 已啟用",
   "License expired, please check your license key": "License 已過期，請檢查您的 License 密鑰",
   "License Expiry": "License 到期",
@@ -449,11 +476,15 @@
   "Log in to your Chatbox account": "登入您的 Chatbox 帳戶",
   "Log out": "登出",
   "Login": "登入",
+  "Login Chatbox AI": "登入 Chatbox AI",
   "Login Error": "登入錯誤",
+  "Login failed.": "登入失敗。",
   "Login Successful": "登入成功",
   "Login successful but tokens not received from server": "登入成功，但未從伺服器收到權杖",
   "Login Timeout": "登入逾時",
   "Login timeout. Please try again.": "登入逾時。請再試一次。",
+  "Login to Chatbox AI": "登入 Chatbox AI",
+  "Login to start chatting with AI": "登入以開始與 AI 對話",
   "Low": "低",
   "Make sure you have the following command installed:": "請確認您已安裝以下指令：",
   "Manage License": "管理 License",
@@ -536,6 +567,7 @@
   "None": "無",
   "not available in browser": "此功能在瀏覽器中無法使用，請下載桌面應用程式以獲取全部功能。",
   "Not set": "未設定",
+  "Note: If you have never had a license before, you can claim it after logging in on the official website. Quota refreshed daily.": "備註：如果您以前從未擁有過授權，可以在登入官網後領取。額度每日更新。",
   "Nothing found...": "沒有找到...",
   "Number of Images per Reply": "每次回覆的圖片數量",
   "OCR Model": "OCR 模型",
@@ -544,6 +576,7 @@
   "One-click MCP servers for Chatbox AI subscribers": "一鍵 MCP 伺服器適用於 Chatbox AI 訂閱者",
   "Only supports basic text files (.txt, .md, .json, code files, etc.). For PDF and Office files, please switch to Chatbox AI.": "僅支援基本文字檔（例如 .txt、.md、.json、程式碼檔案等）。對於 PDF 和 Office 檔案，請切換至 Chatbox AI。",
   "Open": "開啟",
+  "Open Provider Settings": "開啟提供者設定",
   "openai": "經典API調用方式，更好的兼容性，適用於大多數GPT模型",
   "OpenAI (Responses API)": "OpenAI（Responses API）",
   "OpenAI API Compatible": "OpenAI API 兼容",
@@ -556,6 +589,7 @@
   "or": "或",
   "Or become a sponsor": "或成為贊助商",
   "Other concerns": "其他問題",
+  "Other options": "其他選項",
   "Parse Link": "解析連結",
   "Parser": "解析器",
   "Parser Type": "解析器類型",
@@ -570,6 +604,7 @@
   "Platform Not Supported": "不支援此平台",
   "Please click the link below to complete login:": "請點擊以下連結以完成登入：",
   "Please complete login in your browser. If you are not redirected, please click the link below:": "請在您的瀏覽器中完成登入。如果您沒有被重新導向，請點擊下方連結：",
+  "Please complete setup to continue chatting": "請完成設定以繼續聊天",
   "Please describe the content you want to report (Optional)": "請描述您想要舉報的內容（可選）",
   "Please ensure that the Remote LM Studio Service is able to connect remotely. For more details, refer to <a>this tutorial</a>.": "請確保遠程 LM Studio 服務能夠遠程連接。有關更多詳情，請參閱<a>此教程</a>。",
   "Please ensure that the Remote Ollama Service is able to connect remotely. For more details, refer to <a>this tutorial</a>.": "請確保遠程 Ollama 服務能夠遠程連接。有關更多詳情，請參閱<a>此教程</a>。",
@@ -584,6 +619,7 @@
   "Premium Activation": "高級版啟用",
   "Premium License Activated": "高級版已啟用",
   "Premium License Key": "高級版授權密鑰",
+  "Preparing login...": "正在準備登入...",
   "Press hotkey": "輸入快捷鍵",
   "Preview": "預覽",
   "Privacy Policy": "隱私政策",
@@ -610,6 +646,7 @@
   "Read our": "閱讀我們的",
   "Reading file...": "讀取文件中...",
   "Reasoning": "推理",
+  "Recommended": "推薦",
   "Recover": "恢復",
   "Recover Conversation List": "復原對話列表",
   "Recovered {{count}} conversations": "已恢復 {{count}} 個對話",
@@ -652,6 +689,7 @@
   "Retrying {{attempt}}/{{maxAttempts}}": "正在重試 {{attempt}}/{{maxAttempts}}",
   "Return to the top": "跳轉到頂部",
   "Roadmap": "未來規劃",
+  "Rollback Thread": "回退對話串",
   "save": "儲存",
   "Save": "儲存",
   "Save & Resend": "儲存並重發",
@@ -706,6 +744,7 @@
   "Show/Hide the Search Dialog": "顯示/隱藏搜索對話框",
   "Showing {{loaded}} of {{total}} chunks": "顯示 {{loaded}} / 共 {{total}} 區塊",
   "Showing first {{count}} chunks": "顯示前 {{count}} 個區塊",
+  "Skip guide": "跳過指南",
   "Smartest AI-Powered Services for Rapid Access": "最智能的 AI 服務，快速訪問",
   "Some files failed to parse. Please remove them and try again.": "部分檔案解析失敗，請移除後重試。",
   "Sorry, the current model {{model}} API itself does not support image understanding. If you need to send images, please switch to another model or use the recommended <OpenMorePlanButton>Chatbox AI Models</OpenMorePlanButton>.": "抱歉，當前模型 {{model}} API 本身不支持圖片理解。如果您需要發送圖片，請切換到其他模型或使用推薦的 <OpenMorePlanButton>Chatbox AI Models</OpenMorePlanButton>。",
@@ -718,10 +757,12 @@
   "Standard": "標準",
   "star": "星標",
   "Start a New Thread": "新話題",
+  "Start New Chat": "開始新對話",
   "Start Setup": "開始設置",
   "Starting new thread...": "正在建立新對話...",
   "Startup Page": "啟動頁面",
   "Status": "狀態",
+  "Stay": "留在這裡",
   "stop generating": "停止產生",
   "Stream output": "流式輸出",
   "submit": "提交",
@@ -804,6 +845,8 @@
   "Total": "總計",
   "Total Chunks": "總區塊",
   "Total Quota": "總配額",
+  "Try again": "再試一次",
+  "try Chatbox AI": "試用 Chatbox AI",
   "Type": "類型",
   "Type a command or search": "輸入指令或搜索",
   "Type your question here...": "在這裡輸入你的問題...",
@@ -826,6 +869,7 @@
   "Upload your first document to get started": "上傳您的首份文件即可開始",
   "Upon import, changes will take effect immediately and existing data will be overwritten": "匯入後將直接生效，原有資料將會被覆蓋",
   "Use as Reference": "作為參考",
+  "Use Chatbox AI service": "使用 Chatbox AI 服務",
   "Use My Own API Key / Local Model": "使用自己的 API Key 或本地模型",
   "Use proxy to resolve CORS and other network issues": "使用代理解決 CORS 和其他網路問題",
   "Use server parsing": "使用伺服器解析",
@@ -854,6 +898,7 @@
   "Vision, Drawing, File Understanding and more": "視覺、繪圖、文件理解等",
   "Vivid": "藝術",
   "Waiting for login...": "正在等待登入...",
+  "We've been chatting for a while now. To conserve resources, please complete the setup before continuing our conversation.": "我們已經聊了一段時間了。為了節省資源，請在繼續我們的對話前完成設定。",
   "Web Browsing": "網路瀏覽",
   "Web browsing (coming soon)": "聯網回答 Web browsing（敬請期待）",
   "Web Browsing...": "網路瀏覽中...",
@@ -861,10 +906,15 @@
   "Webpage Published": "網頁已發佈",
   "WeChat": "微信",
   "Welcome to Chatbox": "歡迎使用 Chatbox AI",
+  "Welcome to Chatbox!": "歡迎來到 Chatbox！",
   "What can I help you with today?": "今天我能幫助你什麼？",
+  "What is an API? Where to get it? How to connect?": "什麼是 API？從哪裡獲取？如何連接？",
+  "What is the relationship between Chatbox and other model providers?": "Chatbox 與其他模型提供商之間的關係是什麼？",
   "When enabled, conversations will be automatically summarized to manage context window usage.": "啟用後，對話將會被自動摘要，以管理上下文視窗的使用量。",
+  "Where is the Knowledge Base feature?": "知識庫功能在哪裡？",
   "Yes": "是",
   "You are already a Premium user": "你已經是高級版用戶",
+  "You can ": "你可以  ",
   "You have exceeded the rate limit for the Chatbox AI service. Please try again later.": "您已超過 Chatbox AI 服務的速率限制。請稍後重試。",
   "You have multiple licenses. Please select one to use:": "您擁有多個授權。請選擇一個使用：",
   "You have no more Chatbox AI quota left this month.": "你本月的 Chatbox AI 配額已用完。",
@@ -874,6 +924,9 @@
   "You have selected Tavily as the search provider, but an API key has not been entered yet. Please <OpenExtensionSettingButton>click here to open Settings</OpenExtensionSettingButton> and enter your API key, or choose a different search provider.": "您已選擇 Tavily 作為搜索提供商，但尚未輸入 API 密鑰。請<OpenExtensionSettingButton>點擊這裡打開設置</OpenExtensionSettingButton>並輸入您的 API 密鑰，或選擇其他搜索提供商。",
   "You have unsaved changes. Exiting will discard these changes.": "您有未儲存的變更。退出將會捨棄這些變更。",
   "You have unsaved settings. Are you sure you want to leave?": "您有未保存的設置。確定要離開嗎？",
+  "You haven't completed the setup yet. Your progress will be cleared if you leave now.": "您尚未完成設定。如果您現在離開，您的進度將會被清除。",
+  "You might also want to ask": "您可能還想問",
+  "You've already completed the setup and can use Chatbox normally.\n\nIf you have any questions about Chatbox AI, feel free to ask me here.": "您已完成設定，可以正常使用 Chatbox。\n\n如果您對 Chatbox AI 有任何疑問，隨時可以在這裡詢問我。",
   "Your ChatboxAI subscription already includes access to models from various providers. There's no need to switch providers - you can select different models directly within ChatboxAI. Switching from ChatboxAI to other providers will require their respective API keys. <button>Back to ChatboxAI</button>": "您的 ChatboxAI 訂閱已包含來自各大供應商的模型訪問權限。您可以直接在 ChatboxAI 中選擇不同的模型，無需切換供應商。從 ChatboxAI 切換到其他供應商將需要他們各自的 API 金鑰。<button>返回 ChatboxAI</button>",
   "Your conversation has exceeded the model's context limit. Try compressing the conversation, starting a new chat, or reducing the number of context messages in settings.": "您的對話已超過模型的上下文限制。請嘗試壓縮對話、開啟新對話，或在設定中減少上下文消息數量。",
   "Your current License (Chatbox AI Lite) does not support the {{model}} model. To use this model, please <OpenMorePlanButton>upgrade</OpenMorePlanButton> to Chatbox AI Pro or a higher-tier package. Alternatively, you can switch to a different model by <OpenSettingButton>accessing the settings</OpenSettingButton>.": "您當前的 License（Chatbox AI Lite）不支持 {{model}} 模型。要使用此模型，請<OpenMorePlanButton>升級</OpenMorePlanButton>到 Chatbox AI Pro 或更高級別的方案。或者，您可以通過<OpenSettingButton>訪問設置</OpenSettingButton>切換到其他模型。",
